# reporter

./: .env  Dockerfile  docker-compose-dep.yml  docker-compose.yml  postman.json  pyproject.toml  start_api.py  test.py
.github/workflows/: docker-ghcr.yml
app/: main.py
app/auth/: __init__.py  init_data_resolver.py  jwt_resolver.py  jwt_settings.py
app/database/: __init__.py  database.py  in_memory.py
app/routers/: __init__.py  service.py  sockets.py  tasks.py  users.py
app/schemas/: tasks.py  users.py
app/utils/: enrich_task.py
tests/: test_api.py
