[project]
name = "back"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "motor>=3.7.0",
    "pyjwt>=2.10.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "redis>=6.0.0",
    "ruff>=0.11.9",
    "uvicorn>=0.34.2",
    "websockets>=15.0.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
